--- a/file_server_hayford/authentication_app/templates/authentication_app/login.html
+++ b/file_server_hayford/authentication_app/templates/authentication_app/login.html
@@ -1,7 +1,5 @@
 {% extends 'filesystem/base.html' %}
-{% block title %}
-    Login
-{% endblock %}
+
 {% block content %}
     <h2>Login</h2>
     <form method="POST" action="">
@@ -12,6 +10,7 @@
         {% if next %}
             <input type="hidden" name="next" value="{{ next }}"/>
         {% endif %}
+        <p><a href="{% url 'signup' %}">Sign Up</a></p>
     </form>
 </form>
 {% endblock %}
