--- a/file_server_hayford/authentication_app/templates/authentication_app/password_reset/password_reset_done.html
+++ b/file_server_hayford/authentication_app/templates/authentication_app/password_reset/password_reset_done.html
@@ -1,4 +1,6 @@
-<h2>Password Reset Successful</h2>
-<p>A password reset email has been sent to your email address.You may go ahead and log in now.</p>
-<a href="{% url 'authentication_app:signin' %}">Log in</a>
+{% extends 'filesystem/base.html' %}
 
+{% block content %}
+    <h2>Password Reset Successful</h2>
+    <p>A password reset email has been sent to your email address.</p>
+{% endblock %}
