--- a/file_server_hayford/authentication_app/templates/authentication_app/password_reset/password_reset_email.html
+++ b/file_server_hayford/authentication_app/templates/authentication_app/password_reset/password_reset_email.html
@@ -1,26 +1,18 @@
-<html>
+{% extends 'filesystem/base.html' %}
 
-<head>
-    <title>Password reset</title>
-</head>
-
-<body>
+{% block content %}
     Hello {{ user.email }},
 
-        We received a request to reset the password for your account for this email address.
-         Click the link below to reset password.
+        <p>We received a request to reset the password for your account for this email address.</p>
+        <p>Click the link below to reset password.</p>
         <p><a href="http://{{ domain }}/reset/{{ uid }}/{{ token }}">http://{{ domain }}/reset/{{ uid }}/{{ token }}</a></p>
 
-        This link can only be used once. If you need to reset your password again,
-         please visit <a href="http:{{ protocol }}://{{domain}}">link</a> and request another reset.
+        <p>This link can only be used once. If you need to reset your password again; 
+            Please visit <a href="http:{{ protocol }}://{{domain}}">link</a> and request another reset.</p>
 
-        If you did not make this request, you can simply ignore this email.
+        <p>If you did not make this request, you can simply ignore this email.</p>
 
-        Sincerely,
-        {{ domain }} Team.
-</body>
-
-</html>
-
-
+        <p>Sincerely,</p>
+        <p>{{ domain }} Team.</p>
+{% endblock %}
 <!-- check here again... -->
