--- a/file_server_hayford/authentication_app/templates/authentication_app/password_reset/password_reset_form.html
+++ b/file_server_hayford/authentication_app/templates/authentication_app/password_reset/password_reset_form.html
@@ -1,6 +1,8 @@
+{% extends 'filesystem/base.html' %}
+
 {% block content %}
 <h2>Password Reset</h2>
-<form method="POST">
+<form method="post">
     {% csrf_token %} {{ form.as_p }}
     <button type="submit">Reset password</button>
 </form>
