--- a/file_server_hayford/authentication_app/templates/authentication_app/signup.html
+++ b/file_server_hayford/authentication_app/templates/authentication_app/signup.html
@@ -8,5 +8,6 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Sign Up</button>
+    <p><a href="{% url 'login' %}">Log In</a></p>
 </form>
 {% endblock %}
