--- a/file_server_hayford/authentication_app/templates/authentication_app/signup.html
+++ b/file_server_hayford/authentication_app/templates/authentication_app/signup.html
@@ -1,13 +1,11 @@
 {% extends 'filesystem/base.html' %}
-{% block title %}
-    Sign Up
-{% endblock %}
+
 {% block content %}
 <h2>Sign Up</h2>
 <form method="POST" action="">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Sign Up</button>
-    <p><a href="{% url 'login' %}">Log In</a></p>
+    <p><a href="{% url 'authentication_app:login' %}">Log In</a></p>
 </form>
 {% endblock %}
