--- a/file_server_hayford/filesystem/static/filesystem/style.css
+++ b/file_server_hayford/filesystem/static/filesystem/style.css
@@ -1,13 +1,40 @@
-*{
-    box-sizing: inherit;
-}
 
 .button_01{
-    width: 21rem;
-    height: 3rem;
+    width: 100%;
     border-radius: 0.3rem;
-    margin: 0 2rem 2rem;
     color: white;
     background: red;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12px 0;
+    border: none;
+}
+
+body{
+    height: 100vh;
+    background-color: grey;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+div{
+    border: 1px solid yellow;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10% 5%;
+    border-radius: 0.3rem;
+}
+
+
+input[type="password"], input[type="email"]{
+    padding: 12px 8px;
+    font-size: 12px;
+    width: 100%;
+    border-radius: 0.3rem;
+    border:none;
 }
