--- a/file_server_hayford/authentication_app/templates/authentication_app/password_reset/password_reset_email.html
+++ b/file_server_hayford/authentication_app/templates/authentication_app/password_reset/password_reset_email.html
@@ -1,4 +1,9 @@
 {% extends 'filesystem/base.html' %}
+{% load static %}
+
+{% block head %}
+  <link rel="stylesheet" href="{% static '' %}">
+{% endblock %}
 
 {% block content %}
     Hello {{ user.email }},
