--- a/file_server_hayford/authentication_app/templates/authentication_app/password_reset/password_reset_form.html
+++ b/file_server_hayford/authentication_app/templates/authentication_app/password_reset/password_reset_form.html
@@ -1,9 +1,17 @@
 {% extends 'filesystem/base.html' %}
+{% load static %}
+
+{% block head %}
+  <link rel="stylesheet" href="{% static '/filesystem/style.css' %}">
+{% endblock %}
 
 {% block content %}
-<h2>Password Reset</h2>
-<form method="post">
-    {% csrf_token %} {{ form.as_p }}
-    <button type="submit">Reset password</button>
-</form>
+<div>
+    <h2>Password Reset</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button class="button_01" type="submit">Reset password</button>
+    </form>
+</div>
 {% endblock %}
