--- a/file_server_hayford/filesystem/static/filesystem/style.css
+++ b/file_server_hayford/filesystem/static/filesystem/style.css
@@ -1,3 +1,7 @@
+*{
+    font-family: Poppins;
+}
+
 
 .button_01{
     width: 100%;
@@ -14,20 +18,37 @@
 
 body{
     height: 100vh;
-    background-color: grey;
+    /* background-color: #10141e; */
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+label, h1, h2, h3, h4, h5, h6, p{
+    color: white;
+}
+
+label{
+    font-size: small;
+}
+
+a{
+    text-decoration: none;
+    color: blue;
+}
+
+.errorlist{
+    color: red;
+}
+
 div{
-    border: 1px solid yellow;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 10% 5%;
-    border-radius: 0.3rem;
+    padding: 2rem 4rem;
+    border-radius:0.5rem;
+    background: #282c34; 
 }
 
 
