--- a/file_server_hayford/filesystem/templates/filesystem/base.html
+++ b/file_server_hayford/filesystem/templates/filesystem/base.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    {% block head %}
-    
-    {% endblock %}
+    <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&display=swap" rel="stylesheet">
+        {% block head %}
+        {% endblock %}
+    </head>
 <body>
     {% block content %}
 
