--- a/file_server_hayford/filesystem/templates/filesystem/search.html
+++ b/file_server_hayford/filesystem/templates/filesystem/search.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'filesystem/base.html' %}
 
 {% block content %}
     <form>
-        <input type="text" name="q">
+        <input type="text" placeholder="Search.." name="q">
         <input type="submit" value="Search">
     </form>
     {% if files %}
