--- a/file_server_hayford/authentication_app/static/authentication_app/style.css
+++ b/file_server_hayford/authentication_app/static/authentication_app/style.css
@@ -1,6 +1,6 @@
 
 
-.button_01{
+/* .button_01{
     width: 21rem;
     height: 3rem;
     border-radius: 0.3rem;
@@ -9,4 +9,4 @@
     border:none;
     background: red;
     cursor: pointer;
-}
+} */
