--- a/file_server_hayford/authentication_app/templates/authentication_app/login.html
+++ b/file_server_hayford/authentication_app/templates/authentication_app/login.html
@@ -8,7 +8,7 @@
 {% block content %}
     <div>
         <h2>Login</h2>
-        <form method="POST">
+        <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
             <button class="button_01" type="submit">Log In</button>
