--- a/file_server_hayford/filesystem/templates/filesystem/preview.html
+++ b/file_server_hayford/filesystem/templates/filesystem/preview.html
@@ -1,20 +1,21 @@
 {% extends 'filesystem/base.html' %}
 
 {% block content %}
+<form action="" method="">
     <h1>{{ file.title }}</h1>
-    {%if file.file.name|lower|slice:'-3:' == 'jpg' %}
+    {% if file.file.name|lower|slice:'-3:' == 'jpg' or file.file.name|lower|slice:'-3:' == 'jpeg' or file.file.name|lower|slice:'-3:' == 'png' or file.file.name|lower|slice:'-3:' == 'gif'  %}
         <img width="500" height="500" src="{{ file.file.url }}" alt="{{ file.title }}">
     {% elif file.file.name|lower|slice:'-3:' == 'mp4' %}
-        <video width="500" height="500" controls>
+        <video width="500" height="500" controls autoplay>
             <source src="{{ file.file.url }}" type="video/mp4">
-            Your browser does not support the video tag.
+            Your browser does not support the video.
         </video>
     {% elif file.file.name|lower|slice:'-3:' == 'mp3' %}
-        <audio controls>
-            <source src="{{ file.file.url }}">
-            Your browser does not support the audio tag.
+        <audio controls autoplay>
+            <source src="{{ file.file.url }}" type="audio/mpeg">
+            Your browser does not support the audio.
         </audio>
-    {%endif%}
+    {% endif %}
     <p>{{ file.description }}</p>
     <li>
         <button>
@@ -30,4 +31,5 @@
             </a>
         </button>
     </li>
+</form>
 {% endblock %}
