--- a/file_server_hayford/filesystem/templates/filesystem/open_page.html
+++ b/file_server_hayford/filesystem/templates/filesystem/open_page.html
@@ -1,27 +1,30 @@
 {% extends 'filesystem/base.html' %}
+{% load static %}
+
+{% block head %}
+    <link rel="stylesheet" href="{% static '/filesystem/index.css' %}">
+{% endblock %}
 
 {% block content %}
-    <h1>{{file.title}}</h1>
-    <li>
-        {% comment %}<a href="{{file.file.url }}">{{ file.name }}</a>{% endcomment %}
-        {% if file.thumbnail %}
-            <img class="" alt="{{ file.title }}" src="{{ file.thumbnail.url }}"/>
+    <div class="preview margin-top">
+        <div>
+            <h1>{{file.title}}</h1>
+            {% comment %}<a href="{{file.file.url }}">{{ file.name }}</a>{% endcomment %}
+            {% if file.thumbnail %}
+                <img class="" alt="{{ file.title }}" src="{{ file.thumbnail.url }}"/>
             {% endif %}
-    </li>
-    <p>{{ file.description }}</p>
-    <li>
-        <button>
-            <a href="{% url 'filesystem:preview' file.id %}" preview>Preview</a>
-        </button>
-    </li>
-    <li>
-        <button>
-            <a href="{% url 'filesystem:download_file' file.id %}" download>Download</a>
-        </button>
-    </li>
-    <li>
-        <button>
-            <a href="{% url 'filesystem:send_file_email' file.id %}" >Send Email</a>
-        </button>
-    </li>
+            <p><label>Description of context: </label>{{ file.description }}</p>
+            <div>
+                <button class="button_01 margin-top">
+                    <a href="{% url 'filesystem:preview' file.id %}" preview>Preview</a>
+                </button>
+                <button class="button_01 margin-top">
+                    <a href="{% url 'filesystem:download_file' file.id %}" download>Download</a>
+                </button>
+                <button class="button_01 margin-top">
+                    <a href="{% url 'filesystem:send_file_email' file.id %}" >Send Email</a>
+                </button>
+            </div>
+        </div>
+    </div>
 {% endblock %}
