pagination and restructuring

--- a/file_server_hayford/authentication_app/templates/authentication_app/activation_404.html
+++ b/file_server_hayford/authentication_app/templates/authentication_app/activation_404.html
@@ -1,2 +1,4 @@
-<h1>Activation link invalid</h1>
-<p>The activation link is invalid. Please sign up again or contact support.</p>
+<div>
+    <h1>Activation link invalid</h1>
+    <p>The activation link is invalid. Please sign up again or contact support.</p>
+</div>
