--- a/file_server_hayford/filesystem/templates/filesystem/open_page.html
+++ b/file_server_hayford/filesystem/templates/filesystem/open_page.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block content %}
+<a href="{% url 'filesystem:upload_list' %}">Previous Page</a>
     <div class="preview margin-top">
         <div>
             <h1>{{file.title}}</h1>
