--- a/file_server_hayford/filesystem/templates/filesystem/search.html
+++ b/file_server_hayford/filesystem/templates/filesystem/search.html
@@ -11,6 +11,7 @@
             <input type="submit" value="Search">
         </form>   
         <div>
+            <p><a href="{% url 'filesystem:upload_list' %}">Previous Page</a></p>
             <p><a href="{% url 'authentication_app:logout' %}">logout</a></p>
         </div>
     </div>
