--- a/file_server_hayford/authentication_app/templates/authentication_app/signup.html
+++ b/file_server_hayford/authentication_app/templates/authentication_app/signup.html
@@ -11,7 +11,7 @@
   <form method="POST" action="">
       {% csrf_token %}
       {{ form.as_p }}
-      <button class="button_01" type="submit">Sign Up</button>
+      <button type="submit">Sign Up</button>
       <p>Have an account? <a href="{% url 'authentication_app:login' %}">Log In</a></p>
   </form>
 </div>
