--- a/file_server_hayford/filesystem/static/filesystem/index.css
+++ b/file_server_hayford/filesystem/static/filesystem/index.css
@@ -134,9 +134,25 @@ input[type="submit"]{
     background-color:aliceblue;
     padding: 1rem;
     position:absolute;
-    bottom: 0;
 }
 
 .margin-top{
     margin-top: 1rem;
+}
+
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #ddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #ddd;
 }
