--- a/file_server_hayford/filesystem/static/filesystem/style.css
+++ b/file_server_hayford/filesystem/static/filesystem/style.css
@@ -1,8 +1,128 @@
 *{
-    font-family: Poppins;
+    font-family: 'Alegreya Sans';
+    color: #191847;
 }
 
+body{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+.dropdown {
+    display: inline-block;
+    position: relative;
+  }
+  
+  button{
+    border:none;
+    border-radius:5px;
+    padding:12px 8px;
+    font-size:18px;
+    cursor:pointer;
+  }
+  
+  button:hover{
+    background-color:#ddd;
+  }
+  
+  .dropdown-options {
+    display: none;
+    position: absolute;
+    overflow: auto;
+    background-color:#fff;
+    border-radius:5px;
+  }
+  
+  .dropdown:hover .dropdown-options {
+    display: block;
+  }
+  
+  .dropdown-options a {
+    display: block;
+    color: #000000;
+    padding: 5px;
+    text-decoration: none;
+    padding:10px 20px;
+  }
+  
+  .dropdown-options a:hover {
+    color: #0a0a23;
+    background-color: #ddd;
+    border-radius:5px;
+  }
+
+div{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0.5rem;
+    background-color: rgb(236, 236, 236);
+}
+
+form{
+    width: 80%;
+}
+
+div{
+    padding: 1.5rem 1rem;
+}
+
+input{
+    width: 100%;
+    border-radius: 0.3rem;
+    border: none;
+    font-size: 12px;
+    padding: 12px 8px;
+}
+
+button{
+    background-color: #0047FF;
+    color: white;
+    width: 100%;
+    border: none;
+    border-radius: 0.3rem;
+    padding: .75rem 0;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.06), 0px 4px 6px -1px rgba(0, 0, 0, 0.1);
+}
+
+form > p{
+    align-items: end;
+}
+
+a{
+    text-decoration: none;
+    color: #0047FF;
+}
+
+.errorlist{
+    color: red;
+}
+/*
+input[type="password"], input[type="email"],input[type="file"], input, textarea{
+    padding: 12px 8px;
+    font-size: 12px;
+    width: 100%;
+    border-radius: 0.3rem;
+    border:none;
+} 
+
+div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem 4rem;
+    border-radius:0.5rem;
+    background: #282c34; 
+}
 .button_01{
     width: 100%;
     border-radius: 0.3rem;
@@ -18,7 +138,6 @@
 
 body{
     height: 100vh;
-    /* background-color: #10141e; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -41,22 +160,9 @@ a{
     color: red;
 }
 
-div{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 2rem 4rem;
-    border-radius:0.5rem;
-    background: #282c34; 
-}
 
 
-input[type="password"], input[type="email"],input[type="file"], input, textarea{
-    padding: 12px 8px;
-    font-size: 12px;
-    width: 100%;
-    border-radius: 0.3rem;
-    border:none;
-}
+
+*/
+
 
