commit dropdown button change

--- a/file_server_hayford/filesystem/static/filesystem/style.css
+++ b/file_server_hayford/filesystem/static/filesystem/style.css
@@ -30,6 +30,7 @@ body{
   .dropdown-options {
     display: none;
     position: absolute;
+    top: 0;
     overflow: auto;
     background-color:#fff;
     border-radius:5px;
