--- a/file_server_hayford/uploads/files/127.0.0.1%3A8000/static/filesystem/index.css
+++ b/file_server_hayford/uploads/files/127.0.0.1%3A8000/static/filesystem/index.css
@@ -38,6 +38,51 @@ img, video, audio{
     overflow: clip;
 }
 
+
+.dropdown {
+  display: inline-block;
+  position: relative;
+}
+
+button{
+  border:none;
+  border-radius:5px;
+  padding:12px 8px;
+  font-size:18px;
+  cursor:pointer;
+}
+
+button:hover{
+  background-color:#ddd;
+}
+
+.dropdown-options {
+  display: none;
+  position: absolute;
+  top: 0;
+  overflow: auto;
+  background-color:#fff;
+  border-radius:5px;
+}
+
+.dropdown:hover .dropdown-options {
+  display: block;
+}
+
+.dropdown-options a {
+  display: block;
+  color: #000000;
+  padding: 5px;
+  text-decoration: none;
+  padding:10px 20px;
+}
+
+.dropdown-options a:hover {
+  color: #0a0a23;
+  background-color: #ddd;
+  border-radius:5px;
+}
+
 .icon{
     width: 1.5rem;
     height: 1.5rem;
