--- a/file_server_hayford/filesystem/static/filesystem/style.css
+++ b/file_server_hayford/filesystem/static/filesystem/style.css
@@ -10,52 +10,9 @@ body{
     justify-content: center;
 }
 
-.dropdown {
-    display: inline-block;
-    position: relative;
-  }
   
-  button{
-    border:none;
-    border-radius:5px;
-    padding:12px 8px;
-    font-size:18px;
-    cursor:pointer;
-  }
-  
-  button:hover{
-    background-color:#ddd;
-  }
-  
-  .dropdown-options {
-    display: none;
-    position: absolute;
-    top: 0;
-    overflow: auto;
-    background-color:#fff;
-    border-radius:5px;
-  }
-  
-  .dropdown:hover .dropdown-options {
-    display: block;
-  }
-  
-  .dropdown-options a {
-    display: block;
-    color: #000000;
-    padding: 5px;
-    text-decoration: none;
-    padding:10px 20px;
-  }
-  
-  .dropdown-options a:hover {
-    color: #0a0a23;
-    background-color: #ddd;
-    border-radius:5px;
-  }
-
 div{
-    width: 40%;
+    width: 25rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -76,7 +33,7 @@ input{
     width: 100%;
     border-radius: 0.3rem;
     border: none;
-    font-size: 12px;
+    font-size: 16px;
     padding: 12px 8px;
 }
 
@@ -106,64 +63,3 @@ a{
 .errorlist{
     color: red;
 }
-/*
-input[type="password"], input[type="email"],input[type="file"], input, textarea{
-    padding: 12px 8px;
-    font-size: 12px;
-    width: 100%;
-    border-radius: 0.3rem;
-    border:none;
-} 
-
-div{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 2rem 4rem;
-    border-radius:0.5rem;
-    background: #282c34; 
-}
-.button_01{
-    width: 100%;
-    border-radius: 0.3rem;
-    color: white;
-    background: red;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 12px 0;
-    border: none;
-}
-
-body{
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-label, h1, h2, h3, h4, h5, h6, p{
-    color: white;
-}
-
-label{
-    font-size: small;
-}
-
-a{
-    text-decoration: none;
-    color: blue;
-}
-
-.errorlist{
-    color: red;
-}
-
-
-
-
-*/
-
-
