--- a/file_server_hayford/filesystem/static/filesystem/index.css
+++ b/file_server_hayford/filesystem/static/filesystem/index.css
@@ -10,17 +10,10 @@
     display:flex;
     align-items: center;
     justify-content: space-between;
-    background-color:antiquewhite;
-    padding: 1rem 2rem;
+    background-color: #4C5760;
+    padding: .5rem 2rem;
     font-weight: bold;
     font-size: 12px;
-}
-
-.heading div{
-    display:flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
 }
 
 .heading a{
@@ -66,7 +59,6 @@ img, video, audio{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* top: 0; */
 }
 
 .dropdown-options a{
@@ -77,7 +69,7 @@ img, video, audio{
 
 
 .SuperAdmin{
-    background-color: beige;
+    background-color: #D7CEB2;
     padding: .5rem 2rem;
     display: flex;
     flex-direction: column;
@@ -102,10 +94,14 @@ img, video, audio{
     padding: 5rem;
     font-weight: 700;
     font-size: 16px;
-    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .main div{
+    width: 80%;
     padding: 1rem;
     border-radius: 1rem;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.06), 0px 1px 3px rgba(0, 0, 0, 0.1);
@@ -117,7 +113,7 @@ img, video, audio{
 }
 
 .user{
-    color:maroon;
+    color:white;
 }
 
 .main div p{
@@ -143,34 +139,112 @@ img, video, audio{
 .file_label a{
     text-decoration: none;
 }
-/* .main div p{
-    padding: 1rem;
-    margin: 1rem 0;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.06), 0px 1px 3px rgba(0, 0, 0, 0.1);
-    border-radius: 0.5rem;
-    display:flex;
-    justify-content:space-between;
-    align-items: center;
+
+
+.submit-input{
+    padding: 10px 20px;
+    font-size: 12px;
+    width: 20rem;
+    border-top-left-radius: .3rem;
+    border-bottom-left-radius: .3rem;
+    border:none;
 }
 
-div a{
-    color:black;
+.submit-buttom{
+    padding: 10px 20px;
+    font-size: 12px;
+    width: 35%;
+    border:none;
+    border-top-right-radius: .3rem;
+    border-bottom-right-radius: .3rem;
+    background-color: #D7CEB2;
 }
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #D7CEB2;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #D7CEB2;
+}
+
+ .nav-button {
+    position: relative;
+}
+
+.sub-options{
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #D7CEB2;
+  border-radius: .75rem;
+}
+.main-button {
+  padding: 10px 20px;
+  background-color: #D7CEB2;
+  border-radius: .75rem;
+  border: none;
+  cursor: pointer;
+}
+.main-button:hover + .sub-options, .sub-options:hover {
+      display: block;
+  }
+
+.sub-options a{
+    width: 6.05rem;
+    display: block;
+    padding: .8rem;
+    text-decoration: none;
+    color: #333;
+}
+
+
+.custom-button{
+    padding: 10px 20px;
+    background-color: #D7CEB2;
+    border-radius: .75rem;
+    border: none;
+    cursor: pointer;
+}
+
+.size-out{
+    width: 100%;
+    margin-top: 1rem;
+}
+
+.size-out a{
+    text-decoration: none;
+}
+
 
 .preview{
     padding: 5rem;
 }
 
-.preview div{
+.preview>div{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    border-radius: .75rem;
+    padding: 5rem 0;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.06), 0px 1px 3px rgba(0, 0, 0, 0.1);
 }
+
 .preview div p{
     width: 70%;
     padding: 1rem;
     margin: 1rem 0;
+    border-radius: .75rem;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.06), 0px 1px 3px rgba(0, 0, 0, 0.1);
 }
 
 .preview div>div{
@@ -178,107 +252,6 @@ div a{
     width: 70%;
 }
 
-.preview div>div button{
-    width: 100%;
-    border-radius: 0.3rem;
-    color: white;
-    background: red;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 12px 0;
-    border: none;
-}
-
-
-.preview div p label, .user{
+.preview div p label{
     color: blue;
 }
-
-a{
-    text-decoration: none;
-    color: blue;
-}
-
-input[type="text"]{
-    padding: 6px 4px;
-    font-size: 12px;
-    width: 70%;
-    border-top-left-radius: .3rem;
-    border-bottom-left-radius: .3rem;
-    border:none;
-}
-
-input[type="submit"]{
-    padding: 6px 4px;
-    font-size: 12px;
-    width: 35%;
-    border:none;
-    border-top-right-radius: .3rem;
-    border-bottom-right-radius: .3rem;
-}
-
-.foot{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-weight: bold;
-    font-size: 12px;
-    background-color:aliceblue;
-    padding: 1rem;
-    position:absolute;
-}
-
-.margin-top{
-    margin-top: 1rem;
-}
-
-
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td, th {
-  border: 1px solid #ddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #ddd;
-}
- */
- .nav-button {
-    position: relative;
-  }
-  
-  .main-button {
-    padding: 10px 20px;
-    background-color: #f1f1f1;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .sub-options {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: #f1f1f1;
-    padding: 10px;
-  }
-  
-  /* .sub-options a {
-    display: block;
-    padding: 5px;
-    text-decoration: none;
-    color: #333;
-  } */
-  
-  /* .nav-button:hover .sub-options {
-    display: block;
-  } */
