--- a/file_server_hayford/filesystem/templates/filesystem/logs.html
+++ b/file_server_hayford/filesystem/templates/filesystem/logs.html
@@ -7,7 +7,9 @@
 {% endblock %}
 
 {% block content %}
-<a href="{% url 'filesystem:upload_list' %}">Previous Page</a>
+    <div class="heading">
+        <p class="custom-button"><a href="{% url 'filesystem:upload_list' %}">Previous Page</a></p>
+    </div>
     <div class="main">
         <h1>Log of files</h1>
         <table>
