--- a/file_server_hayford/filesystem/templates/filesystem/preview.html
+++ b/file_server_hayford/filesystem/templates/filesystem/preview.html
@@ -6,7 +6,9 @@
 {% endblock %}
 
 {% block content %}
-<a href="{% url 'filesystem:upload_list' %}">Previous Page</a>
+    <div class="heading">
+        <p class="custom-button"><a href="{% url 'filesystem:upload_list' %}">Previous Page</a></p>
+    </div>
 <div class="preview margin-top">
     <div>
     <h1>{{ file.title }}</h1> 
@@ -26,12 +28,12 @@
 
     <p><label>Description of context: </label>{{ file.description }}</p>
     <div>
-        <button class="button_01 margin-top">
+        <button class="custom-button size-out">
             <a href="{% url 'filesystem:download_file' file_id=file.id %}">
                  Download {{ file.title }}
             </a>
         </button>
-        <button class="button_01 margin-top">
+        <button class="custom-button size-out">
             <a href="{% url 'filesystem:send_file_email' file.id %}">
                 Send Email
             </a>
