--- a/file_server_hayford/filesystem/static/filesystem/style.css
+++ b/file_server_hayford/filesystem/static/filesystem/style.css
@@ -64,6 +64,8 @@ textarea{
     resize: none;
     width: 100%;
     height: 12rem;
+    border-radius: 0.75rem;
+    border: none;
 }
 
 .errorlist{
