--- a/file_server_hayford/filesystem/static/filesystem/index.css
+++ b/file_server_hayford/filesystem/static/filesystem/index.css
@@ -255,3 +255,10 @@ tr:nth-child(even) {
 .preview div p label{
     color: blue;
 }
+
+
+.pagination{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
