--- a/file_server_hayford/filesystem/templates/filesystem/upload_list.html
+++ b/file_server_hayford/filesystem/templates/filesystem/upload_list.html
@@ -55,11 +55,30 @@
                             <a href="{% url 'filesystem:preview' file.id %}">{{ file.title }}</a>
                         {% endif %}
                     </span>
+                    {% if user.is_superuser %}
                     <em class="button-01">
                         <a href="{% url 'filesystem:delete_file' file.pk %}">Delete</a>
                     </em>
+                    {% endif %}
                 </p>
             {% endfor %}
+        </div>
+        <div class="pagination">
+            <span class="step-links">
+                {% if page_obj.has_previous %}
+                    <a href="?page=1">&laquo; first</a>
+                    <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                {% endif %}
+
+                <span class="current">
+                    Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                </span>
+
+                {% if page_obj.has_next %}
+                    <a href="?page={{ page_obj.next_page_number }}">next</a>
+                    <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                {% endif %}
+            </span>
         </div>
     </div>
 {% endblock %}
