--- a/file_server_hayford/authentication_app/templates/authentication_app/password_reset/password_reset_email.html
+++ b/file_server_hayford/authentication_app/templates/authentication_app/password_reset/password_reset_email.html
@@ -8,16 +8,16 @@
 {% block content %}
     Hello {{ user.email }},
 
-        <p>We received a request to reset the password for your account for this email address.</p>
+        <p>You are receiving this mail because you a request to reset the password for your account for this email address.</p>
         <p>Click the link below to reset password.</p>
         <p><a href="http://{{ domain }}/reset/{{ uid }}/{{ token }}">http://{{ domain }}/reset/{{ uid }}/{{ token }}</a></p>
 
         <p>This link can only be used once. If you need to reset your password again; 
-            Please visit <a href="http:{{ protocol }}://{{domain}}">link</a> and request another reset.</p>
+            Please visit <a href="{{ protocol }}://{{ domain }}/password_reset">link</a> and request another resets.</p><span> Please visit <a href="{{ protocol }}://{{ domain }}/password_reset">link</a></span>
 
         <p>If you did not make this request, you can simply ignore this email.</p>
 
         <p>Sincerely,</p>
         <p>{{ domain }} Team.</p>
 {% endblock %}
-<!-- check here again... -->
+<!-- check here again... -->authentication_app/password_reset
